--- a/sitehandler/templates/patientviewappointments.html
+++ b/sitehandler/templates/patientviewappointments.html
@@ -43,7 +43,7 @@
                                         <td>{{i.symptoms}}</td>
                                     </tr> 
                                     <tr>
-                                        <td>Delete Appointment:</td>
+                                        <th>Delete Appointment:</th>
                                         <td><a href="{% url 'patient_delete_appointment' i.id %}" onclick="return confirm('Are you sure you want to delete?')" class="btn btn-danger">Delete</a></td>
                                     </tr>
                                 </table>
