--- a/sitehandler/templates/adminviewappointments.html
+++ b/sitehandler/templates/adminviewappointments.html
@@ -23,23 +23,23 @@
                             <div class = "card-body collapsible-body">
                                 <table align="center" class="card-text" style="font-size: 19px;"> <caption></caption>
                                     <tr>
-                                        <th>Doctor Name:</th>
+                                        <th id="1">Doctor Name:</th>
                                         <td>{{i.doctorname}}</td>
                                     </tr>
                                     <tr>
-                                        <th>Patient Name:</th>
+                                        <th id="2">Patient Name:</th>
                                         <td>{{i.patientname}}</td>
                                     </tr>
                                     <tr>
-                                        <th>Appointment Date:</th>
+                                        <th id="3">Appointment Date:</th>
                                         <td>{{i.appointmentdate}}</td>
                                     </tr>
                                     <tr>
-                                        <th>Appointment Time:</th>
+                                        <th id="4">Appointment Time:</th>
                                         <td>{{i.appointmenttime}}</td>
                                     </tr>
                                     <tr>
-                                        <th>Symptoms:</th>
+                                        <th id="5">Symptoms:</th>
                                         <td>{{i.symptoms}}</td>
                                     </tr> 
                                 </table>
@@ -59,23 +59,23 @@
                             <div class = "card-body collapsible-body">
                                 <table align="center" class="card-text" style="font-size: 19px;"> <caption></caption>
                                     <tr>
-                                        <th>Doctor Name:</th>
+                                        <th id="6">Doctor Name:</th>
                                         <td>{{j.doctorname}}</td>
                                     </tr>
                                     <tr>
-                                        <th>Patient Name:</th>
+                                        <th id="7">Patient Name:</th>
                                         <td>{{j.patientname}}</td>
                                     </tr>
                                     <tr>
-                                        <th>Appointment Date:</th>
+                                        <th id="8">Appointment Date:</th>
                                         <td>{{j.appointmentdate}}</td>
                                     </tr>
                                     <tr>
-                                        <th>Appointment Time:</th>
+                                        <th id="9">Appointment Time:</th>
                                         <td>{{j.appointmenttime}}</td>
                                     </tr>
                                     <tr>
-                                        <th>Symptoms:</th>
+                                        <th id="10">Symptoms:</th>
                                         <td>{{j.symptoms}}</td>
                                     </tr> 
                                 </table>
