--- a/sitehandler/templates/patientviewappointments.html
+++ b/sitehandler/templates/patientviewappointments.html
@@ -23,27 +23,27 @@
                             <div class = "card-body collapsible-body">
                                 <table align="center" class="card-text" style="font-size: 19px;"> <caption></caption>
                                     <tr>
-                                        <th>Doctor Name:</th>
+                                        <th id="23">Doctor Name:</th>
                                         <td>{{i.doctorname}}</td>
                                     </tr>
                                     <tr>
-                                        <th>Patient Name:</th>
+                                        <th id="24">Patient Name:</th>
                                         <td>{{i.patientname}}</td>
                                     </tr>
                                     <tr>
-                                        <th>Appointment Date:</th>
+                                        <th id="25"> Appointment Date:</th>
                                         <td>{{i.appointmentdate}}</td>
                                     </tr>
                                     <tr>
-                                        <th>Appointment Time:</th>
+                                        <th id="26">Appointment Time:</th>
                                         <td>{{i.appointmenttime}}</td>
                                     </tr>
                                     <tr>
-                                        <th>Symptoms:</th>
+                                        <th id="27"> Symptoms:</th>
                                         <td>{{i.symptoms}}</td>
                                     </tr> 
                                     <tr>
-                                        <th>Delete Appointment:</th>
+                                        <th id="28">Delete Appointment:</th>
                                         <td><a href="{% url 'patient_delete_appointment' i.id %}" onclick="return confirm('Are you sure you want to delete?')" class="btn btn-danger">Delete</a></td>
                                     </tr>
                                 </table>
@@ -63,27 +63,27 @@
                             <div class = "card-body collapsible-body">
                                 <table align="center" class="card-text" style="font-size: 19px;"> <caption></caption>
                                     <tr>
-                                        <th>Doctor Name:</th>
+                                        <th id="29">Doctor Name:</th>
                                         <td>{{j.doctorname}}</td>
                                     </tr>
                                     <tr>
-                                        <th>Patient Name:</th>
+                                        <th id="30">Patient Name:</th>
                                         <td>{{j.patientname}}</td>
                                     </tr>
                                     <tr>
-                                        <th>Appointment Date:</th>
+                                        <th id="31">Appointment Date:</th>
                                         <td>{{j.appointmentdate}}</td>
                                     </tr>
                                     <tr>
-                                        <th>Appointment Time:</th>
+                                        <th id="32">Appointment Time:</th>
                                         <td>{{j.appointmenttime}}</td>
                                     </tr>
                                     <tr>
-                                        <th>Symptoms:</th>
+                                        <th id="33">Symptoms:</th>
                                         <td>{{j.symptoms}}</td>
                                     </tr>
                                     <tr>
-                                        <th>Prescription:</th>
+                                        <th id="34">Prescription:</th>
                                         <td>{{j.prescription}}</td>
                                     </tr>
                                 </table>
