--- a/sitehandler/templates/receptionviewappointments.html
+++ b/sitehandler/templates/receptionviewappointments.html
@@ -23,23 +23,23 @@
                             <div class = "card-body collapsible-body">
                                 <table align="center" class="card-text" style="font-size: 19px;"> <caption></caption>
                                     <tr>
-                                        <th>Doctor Name:</th>
+                                        <th id="40" >Doctor Name:</th>
                                         <td>{{i.doctorname}}</td>
                                     </tr>
                                     <tr>
-                                        <th>Patient Name:</th>
+                                        <th id="41"> Patient Name:</th>
                                         <td>{{i.patientname}}</th>
                                     </tr>
                                     <tr>
-                                        <th>Appointment Date:</th>
+                                        <th id="42">Appointment Date:</th>
                                         <td>{{i.appointmentdate}}</td>
                                     </tr>
                                     <tr>
-                                        <th>Appointment Time:</th>
+                                        <th id="43">Appointment Time:</th>
                                         <td>{{i.appointmenttime}}</td>
                                     </tr>
                                     <tr>
-                                        <th>Symptoms:</th>
+                                        <th id="44">Symptoms:</th>
                                         <td>{{i.symptoms}}</td>
                                     </tr> 
                                 </table>
@@ -59,23 +59,23 @@
                             <div class = "card-body collapsible-body">
                                 <table align="center" class="card-text" style="font-size: 19px;"> <caption></caption>
                                     <tr>
-                                        <th>Doctor Name:</th>
+                                        <th id="45">Doctor Name:</th>
                                         <td>{{j.doctorname}}</td>
                                     </tr>
                                     <tr>
-                                        <th>Patient Name:</th>
+                                        <th id="46">Patient Name:</th>
                                         <td>{{j.patientname}}</td>
                                     </tr>
                                     <tr>
-                                        <th>Appointment Date:</th>
+                                        <th id="47">Appointment Date:</th>
                                         <td>{{j.appointmentdate}}</td>
                                     </tr>
                                     <tr>
-                                        <th>Appointment Time:</th>
+                                        <th id="48">Appointment Time:</th>
                                         <td>{{j.appointmenttime}}</td>
                                     </tr>
                                     <tr>
-                                        <th>Symptoms:</th>
+                                        <th id="49">Symptoms:</th>
                                         <td>{{j.symptoms}}</td>
                                     </tr> 
                                 </table>
